[package]
name = "moonblokz-telemetry-hub"
authors = ["Peter Sallai (Bad Access)<peter.sallai@badaccess.eu>"]
description = "Moonblokz Telemetry Hub - a central application to collect telemetry data from Moonblokz Test Stations."
version = "0.1.1"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "1.1.0"
spin-sdk = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
simple_logger = "5.0"

[workspace]
